--- a/actions.html
+++ b/actions.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Dyrehaugen Web Notebook" />
 
 
-<meta name="date" content="2021-11-02" />
+<meta name="date" content="2022-01-16" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -129,21 +129,29 @@
 <ul>
 <li class="chapter" data-level="9.1" data-path="material-extraction.html"><a href="material-extraction.html#material-and-energy-productivity"><i class="fa fa-check"></i><b>9.1</b> Material and Energy Productivity</a></li>
 <li class="chapter" data-level="9.2" data-path="material-extraction.html"><a href="material-extraction.html#physical-economy-of-united-states"><i class="fa fa-check"></i><b>9.2</b> Physical Economy of United States</a></li>
+<li class="chapter" data-level="9.3" data-path="material-extraction.html"><a href="material-extraction.html#mining"><i class="fa fa-check"></i><b>9.3</b> Mining</a>
+<ul>
+<li class="chapter" data-level="9.3.1" data-path="material-extraction.html"><a href="material-extraction.html#battery-metals"><i class="fa fa-check"></i><b>9.3.1</b> Battery Metals</a></li>
+</ul></li>
 </ul></li>
 <li class="chapter" data-level="10" data-path="pollution.html"><a href="pollution.html"><i class="fa fa-check"></i><b>10</b> Pollution</a>
 <ul>
 <li class="chapter" data-level="10.1" data-path="pollution.html"><a href="pollution.html#fertility"><i class="fa fa-check"></i><b>10.1</b> Fertility</a></li>
 <li class="chapter" data-level="10.2" data-path="pollution.html"><a href="pollution.html#plastics"><i class="fa fa-check"></i><b>10.2</b> Plastics</a>
 <ul>
-<li class="chapter" data-level="10.2.1" data-path="pollution.html"><a href="pollution.html#virgin-polymer-production"><i class="fa fa-check"></i><b>10.2.1</b> Virgin Polymer Production</a></li>
-<li class="chapter" data-level="10.2.2" data-path="pollution.html"><a href="pollution.html#finance"><i class="fa fa-check"></i><b>10.2.2</b> Finance</a></li>
+<li class="chapter" data-level="10.2.1" data-path="pollution.html"><a href="pollution.html#dirty-thirty"><i class="fa fa-check"></i><b>10.2.1</b> Dirty-Thirty</a></li>
+<li class="chapter" data-level="10.2.2" data-path="pollution.html"><a href="pollution.html#virgin-polymer-production"><i class="fa fa-check"></i><b>10.2.2</b> Virgin Polymer Production</a></li>
+<li class="chapter" data-level="10.2.3" data-path="pollution.html"><a href="pollution.html#nurdles"><i class="fa fa-check"></i><b>10.2.3</b> Nurdles</a></li>
+<li class="chapter" data-level="10.2.4" data-path="pollution.html"><a href="pollution.html#finance"><i class="fa fa-check"></i><b>10.2.4</b> Finance</a></li>
 </ul></li>
 <li class="chapter" data-level="10.3" data-path="pollution.html"><a href="pollution.html#chemicals"><i class="fa fa-check"></i><b>10.3</b> Chemicals</a>
 <ul>
-<li class="chapter" data-level="10.3.1" data-path="pollution.html"><a href="pollution.html#tce---parkinson"><i class="fa fa-check"></i><b>10.3.1</b> TCE -&gt; Parkinson</a></li>
-<li class="chapter" data-level="10.3.2" data-path="pollution.html"><a href="pollution.html#voc"><i class="fa fa-check"></i><b>10.3.2</b> VOC</a></li>
-<li class="chapter" data-level="10.3.3" data-path="pollution.html"><a href="pollution.html#effect-on-marine-life"><i class="fa fa-check"></i><b>10.3.3</b> Effect on Marine Life</a></li>
-<li class="chapter" data-level="10.3.4" data-path="pollution.html"><a href="pollution.html#pesticides"><i class="fa fa-check"></i><b>10.3.4</b> Pesticides</a></li>
+<li class="chapter" data-level="10.3.1" data-path="pollution.html"><a href="pollution.html#chemicals-pollution"><i class="fa fa-check"></i><b>10.3.1</b> Chemicals’ Pollution</a></li>
+<li class="chapter" data-level="10.3.2" data-path="pollution.html"><a href="pollution.html#pfas---forever-chemicals"><i class="fa fa-check"></i><b>10.3.2</b> PFAS - “forever chemicals”*</a></li>
+<li class="chapter" data-level="10.3.3" data-path="pollution.html"><a href="pollution.html#tce---parkinson"><i class="fa fa-check"></i><b>10.3.3</b> TCE -&gt; Parkinson</a></li>
+<li class="chapter" data-level="10.3.4" data-path="pollution.html"><a href="pollution.html#voc"><i class="fa fa-check"></i><b>10.3.4</b> VOC</a></li>
+<li class="chapter" data-level="10.3.5" data-path="pollution.html"><a href="pollution.html#effect-on-marine-life"><i class="fa fa-check"></i><b>10.3.5</b> Effect on Marine Life</a></li>
+<li class="chapter" data-level="10.3.6" data-path="pollution.html"><a href="pollution.html#pesticides"><i class="fa fa-check"></i><b>10.3.6</b> Pesticides</a></li>
 </ul></li>
 <li class="chapter" data-level="10.4" data-path="pollution.html"><a href="pollution.html#sewage"><i class="fa fa-check"></i><b>10.4</b> Sewage</a>
 <ul>
@@ -172,10 +180,11 @@
 <li class="chapter" data-level="13.2.1" data-path="land-use.html"><a href="land-use.html#tropical-rainforest"><i class="fa fa-check"></i><b>13.2.1</b> Tropical Rainforest</a></li>
 </ul></li>
 <li class="chapter" data-level="13.3" data-path="land-use.html"><a href="land-use.html#deforestation-footprint"><i class="fa fa-check"></i><b>13.3</b> Deforestation Footprint</a></li>
-<li class="chapter" data-level="13.4" data-path="land-use.html"><a href="land-use.html#soil"><i class="fa fa-check"></i><b>13.4</b> Soil</a></li>
-<li class="chapter" data-level="13.5" data-path="land-use.html"><a href="land-use.html#lakes"><i class="fa fa-check"></i><b>13.5</b> Lakes</a></li>
-<li class="chapter" data-level="13.6" data-path="land-use.html"><a href="land-use.html#mountains"><i class="fa fa-check"></i><b>13.6</b> Mountains</a></li>
-<li class="chapter" data-level="13.7" data-path="land-use.html"><a href="land-use.html#urban"><i class="fa fa-check"></i><b>13.7</b> Urban</a></li>
+<li class="chapter" data-level="13.4" data-path="land-use.html"><a href="land-use.html#wetland"><i class="fa fa-check"></i><b>13.4</b> Wetland</a></li>
+<li class="chapter" data-level="13.5" data-path="land-use.html"><a href="land-use.html#soil"><i class="fa fa-check"></i><b>13.5</b> Soil</a></li>
+<li class="chapter" data-level="13.6" data-path="land-use.html"><a href="land-use.html#lakes"><i class="fa fa-check"></i><b>13.6</b> Lakes</a></li>
+<li class="chapter" data-level="13.7" data-path="land-use.html"><a href="land-use.html#mountains"><i class="fa fa-check"></i><b>13.7</b> Mountains</a></li>
+<li class="chapter" data-level="13.8" data-path="land-use.html"><a href="land-use.html#urban"><i class="fa fa-check"></i><b>13.8</b> Urban</a></li>
 </ul></li>
 <li class="chapter" data-level="14" data-path="monoculture.html"><a href="monoculture.html"><i class="fa fa-check"></i><b>14</b> Monoculture</a>
 <ul>
@@ -198,14 +207,16 @@
 <li class="chapter" data-level="16.6" data-path="actions.html"><a href="actions.html#rewilding"><i class="fa fa-check"></i><b>16.6</b> Rewilding</a></li>
 <li class="chapter" data-level="16.7" data-path="actions.html"><a href="actions.html#conservation"><i class="fa fa-check"></i><b>16.7</b> Conservation</a>
 <ul>
-<li class="chapter" data-level="16.7.1" data-path="actions.html"><a href="actions.html#nashulai"><i class="fa fa-check"></i><b>16.7.1</b> Nashulai</a></li>
-<li class="chapter" data-level="16.7.2" data-path="actions.html"><a href="actions.html#ecotourism"><i class="fa fa-check"></i><b>16.7.2</b> Ecotourism</a></li>
-<li class="chapter" data-level="16.7.3" data-path="actions.html"><a href="actions.html#conservation-trends"><i class="fa fa-check"></i><b>16.7.3</b> Conservation Trends</a></li>
-<li class="chapter" data-level="16.7.4" data-path="actions.html"><a href="actions.html#legacy-landscapes-fund"><i class="fa fa-check"></i><b>16.7.4</b> Legacy Landscapes Fund</a></li>
+<li class="chapter" data-level="16.7.1" data-path="actions.html"><a href="actions.html#communal-conservation"><i class="fa fa-check"></i><b>16.7.1</b> Communal Conservation</a></li>
+<li class="chapter" data-level="16.7.2" data-path="actions.html"><a href="actions.html#nashulai"><i class="fa fa-check"></i><b>16.7.2</b> Nashulai</a></li>
+<li class="chapter" data-level="16.7.3" data-path="actions.html"><a href="actions.html#ecotourism"><i class="fa fa-check"></i><b>16.7.3</b> Ecotourism</a></li>
+<li class="chapter" data-level="16.7.4" data-path="actions.html"><a href="actions.html#conservation-trends"><i class="fa fa-check"></i><b>16.7.4</b> Conservation Trends</a></li>
+<li class="chapter" data-level="16.7.5" data-path="actions.html"><a href="actions.html#legacy-landscapes-fund"><i class="fa fa-check"></i><b>16.7.5</b> Legacy Landscapes Fund</a></li>
 </ul></li>
 <li class="chapter" data-level="16.8" data-path="actions.html"><a href="actions.html#restoration"><i class="fa fa-check"></i><b>16.8</b> Restoration</a>
 <ul>
-<li class="chapter" data-level="16.8.1" data-path="actions.html"><a href="actions.html#regreening-sinai"><i class="fa fa-check"></i><b>16.8.1</b> Regreening Sinai</a></li>
+<li class="chapter" data-level="16.8.1" data-path="actions.html"><a href="actions.html#natural-regeneration"><i class="fa fa-check"></i><b>16.8.1</b> Natural regeneration</a></li>
+<li class="chapter" data-level="16.8.2" data-path="actions.html"><a href="actions.html#regreening-sinai"><i class="fa fa-check"></i><b>16.8.2</b> Regreening Sinai</a></li>
 </ul></li>
 <li class="chapter" data-level="16.9" data-path="actions.html"><a href="actions.html#legal"><i class="fa fa-check"></i><b>16.9</b> Legal</a></li>
 <li class="chapter" data-level="16.10" data-path="actions.html"><a href="actions.html#conflict-atlas"><i class="fa fa-check"></i><b>16.10</b> Conflict Atlas</a></li>
@@ -364,8 +375,14 @@ funding it.</p>
 <p>The Protected Planet report is the final report card on <a href="http://url3193.iucn-crm.org/ls/click">Aichi Target 11</a> – the global 10-year target on protected and conserved areas. The UN calculated that 16.64% of land and inland waters has been protected to date but concluded that governments had met the 17% target because of a lag in reporting on data. The 17% ambition was just one of seven parts of Aichi Target 11. Governments <a href="https://www.theguardian.com/environment/2020/sep/15/every-global-target-to-stem-destruction-of-nature-by-2020-missed-un-report-aoe">have not fully met</a> any of the 20 Aichi biodiversity targets agreed in Nagoya, Japan, in 2010.</p>
 <p>Despite making significant progress, the report warns, a third of key biodiversity areas lack any coverage, connectivity between areas protected for nature remains poor and gaps remain in the quality of conservation work.</p>
 <p><a href="https://www.theguardian.com/environment/2021/may/19/governments-achieve-10-year-target-of-protecting-17-percent-land-aoe">Guardian</a></p>
-<div id="nashulai" class="section level3" number="16.7.1">
-<h3><span class="header-section-number">16.7.1</span> Nashulai</h3>
+<div id="communal-conservation" class="section level3" number="16.7.1">
+<h3><span class="header-section-number">16.7.1</span> Communal Conservation</h3>
+<p><em>Nijhuis</em></p>
+<p>In southern Africa in the 1980s, some conservationists recognised that parks and reserves, many created by colonial governments, had divided subsistence hunters and farmers from much of the wildlife that had long sustained them – and which, in some cases, they’d managed as a commons for generations. The resulting lack of local support meant that even the best-patrolled park boundaries were vulnerable to incursions by human neighbours, people unlikely to tolerate – much less protect – the large, sometimes troublesome species that ranged beyond even the largest reserves.</p>
+<p><a href="The%20miracle%20of%20the%20commons">Nijhuis (2021) The miracle of the commons</a></p>
+</div>
+<div id="nashulai" class="section level3" number="16.7.2">
+<h3><span class="header-section-number">16.7.2</span> Nashulai</h3>
 <p>In Kenya, communities are starting to rethink wildlife conservation. Traditional methods often meant moving indigenous people from their land to make way for protected areas and wildlife.
 Nashulai, on the edge of Kenya’s world famous Maasai Mara National Reserve, wants to change that. It’s a conservancy where humans and animals live side-by-side, reviving ancient practices.</p>
 <blockquote>
@@ -379,21 +396,21 @@ Then invite tourists to come and enjoy that.</p>
 </blockquote>
 <p><a href="https://www.bbc.com/news/av/world-africa-55477272">Nashulai: The community trying to conserve Kenya’s wildlife</a></p>
 </div>
-<div id="ecotourism" class="section level3" number="16.7.2">
-<h3><span class="header-section-number">16.7.2</span> Ecotourism</h3>
-<div id="pandemics-ecotourism-bust" class="section level4" number="16.7.2.1">
-<h4><span class="header-section-number">16.7.2.1</span> Pandemics Ecotourism Bust</h4>
+<div id="ecotourism" class="section level3" number="16.7.3">
+<h3><span class="header-section-number">16.7.3</span> Ecotourism</h3>
+<div id="pandemics-ecotourism-bust" class="section level4" number="16.7.3.1">
+<h4><span class="header-section-number">16.7.3.1</span> Pandemics Ecotourism Bust</h4>
 <p><a href="https://www.theguardian.com/environment/2020/dec/30/a-critical-time-how-covid-19-put-the-natural-world-under-pressure-in-2020-aoe">Pandemics Ecotourism Conservation (The Guardian)</a></p>
 </div>
 </div>
-<div id="conservation-trends" class="section level3" number="16.7.3">
-<h3><span class="header-section-number">16.7.3</span> Conservation Trends</h3>
+<div id="conservation-trends" class="section level3" number="16.7.4">
+<h3><span class="header-section-number">16.7.4</span> Conservation Trends</h3>
 <p><a href="https://www.theguardian.com/environment/2020/dec/28/seabird-patrols-to-self-healing-buildings-the-15-conservation-stories-to-watch-in-2021">Biological Conservation Issues (The Guardian)</a></p>
 <p><a href="https://www.cell.com/trends/ecology-evolution/fulltext/S0169-5347(20)30306-2">Emerging Global Biological Conservation Issues (article)</a>
 <a href="/pdf/Sutherland_2020_Horizon_Scan_Biological_Conservation_Issues.pdf">(pdf)</a></p>
 </div>
-<div id="legacy-landscapes-fund" class="section level3" number="16.7.4">
-<h3><span class="header-section-number">16.7.4</span> Legacy Landscapes Fund</h3>
+<div id="legacy-landscapes-fund" class="section level3" number="16.7.5">
+<h3><span class="header-section-number">16.7.5</span> Legacy Landscapes Fund</h3>
 <p><em>Guardian</em></p>
 <p>A new public-private scheme backed by the German government to provide long-term funding for biodiverse areas in developing countries is launched on Wednesday. Known as the Legacy Landscapes Fund (LLF), it aims to provide stable financing for at least 30 conservation areas by the end of this decade to pay for park rangers, support surrounding communities and maintain infrastructure. Under the 30x30 initiative, more than 50 countries have committed to protect almost a third of the planet by 2030.</p>
 <p>Through public and private donors, the LLF aims to become one of the biggest nature conservation foundations in the world, with $1bn (£700m) of capital by 2030. Pilot projects in Angola, Indonesia and Bolivia are among those selected for the launch.</p>
@@ -414,8 +431,22 @@ didn’t belong in the first place, like grasslands or wetland.
 That will be detrimental to biodiversity.</p>
 <p>The headline target of the UNEP initiative is to restore 3.5 million square kilometres of land over the coming decade – slightly more than the size of India, or just over 2 per cent of the world’s land surface.</p>
 <p><a href="https://www.newscientist.com/article/mg24933223-300-rescue-plan-for-nature-how-to-fix-the-biodiversity-crisis/">New Scientist</a></p>
-<div id="regreening-sinai" class="section level3" number="16.8.1">
-<h3><span class="header-section-number">16.8.1</span> Regreening Sinai</h3>
+<div id="natural-regeneration" class="section level3" number="16.8.1">
+<h3><span class="header-section-number">16.8.1</span> Natural regeneration</h3>
+<p>Tropical forests have the potential to almost fully regrow if they are left untouched by humans for about 20 years. This is due to a multidimensional mechanism whereby old forest flora and fauna help a new generation of forest grow – a natural process known as “secondary succession”.</p>
+<p>More than 90 researchers from all over the world came together to analyse exactly how tropical forest regrowth takes place. They pored over data about forest recovery from three continents, 77 sites and 2,275 plots of land in the Americas and West Africa. From there, they evaluated 12 specific criteria, such as the soil, plant functioning, ecosystem structure and biodiversity, and more. They then modelled this data – without which they would have had to wait for over 100 years to see this happen in the real world – with a technique called chronosequencing, allowing them to infer long-term trends in forest recovery.</p>
+<p>The researchers looked in particular at what happens to tropical forest land that has been used for agriculture or farming and is then abandoned after a couple of seasons. They found that the old forest portion – including some fertile soil, any residual trees, seed banks and maybe stumps that can resprout – created a nourishing, interconnected ecosystem for new forest to start to grow.</p>
+<p>The researchers found that different aspects take, respectively, more or less time to recover to the levels of “old forest” before it was used. Soil takes an average of 10 years to recover to its previous status, plant community and animal biodiversity take 60 years, and overall biomass takes a total of 120, according to their calculations.</p>
+<p>But overall, tropical forests can get back to roughly 78% of their old-growth status in just 20 years.</p>
+<p>These are calculations, and one of the constraints of chronosequence-based analyses is that every location analysed is assumed to have the same history and successional dynamics.</p>
+<p>“The secondary forests are like teenagers. They soak up carbon like crazy and they empty your fridge,”</p>
+<p>A lot of the promises that have been made about planting trees in order to restore forests across the world are unrealistic. Most of the time, 30%-50% of those trees die, and they only pertain to a couple of species that cannot mimic the natural biodiversity of forests.</p>
+<p>Use natural regrowth where you can and plant actively and restore actively where you need to. There’s a case-by-case approach, and this all depends on the local conditions and also on the local needs of the people because they live in these landscapes.</p>
+<p><a href="http://www.science.org/doi/10.1126/science.abh3629">Science (paywall)</a></p>
+<p><a href="https://www.theguardian.com/environment/2021/dec/09/tropical-forests-can-regenerate-in-just-20-years-without-human-interference">Guardian (2021)</a></p>
+</div>
+<div id="regreening-sinai" class="section level3" number="16.8.2">
+<h3><span class="header-section-number">16.8.2</span> Regreening Sinai</h3>
 <p><em>The Weather Makers</em></p>
 <p>Chop down the trees, destroy the ecosystem, and the rains disappear;
 restore the ecosystem, make a wetter landscape, and the rains come back.</p>
