--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Dyrehaugen Web Notebook" />
 
 
-<meta name="date" content="2021-11-02" />
+<meta name="date" content="2022-01-16" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -129,21 +129,29 @@
 <ul>
 <li class="chapter" data-level="9.1" data-path="material-extraction.html"><a href="material-extraction.html#material-and-energy-productivity"><i class="fa fa-check"></i><b>9.1</b> Material and Energy Productivity</a></li>
 <li class="chapter" data-level="9.2" data-path="material-extraction.html"><a href="material-extraction.html#physical-economy-of-united-states"><i class="fa fa-check"></i><b>9.2</b> Physical Economy of United States</a></li>
+<li class="chapter" data-level="9.3" data-path="material-extraction.html"><a href="material-extraction.html#mining"><i class="fa fa-check"></i><b>9.3</b> Mining</a>
+<ul>
+<li class="chapter" data-level="9.3.1" data-path="material-extraction.html"><a href="material-extraction.html#battery-metals"><i class="fa fa-check"></i><b>9.3.1</b> Battery Metals</a></li>
+</ul></li>
 </ul></li>
 <li class="chapter" data-level="10" data-path="pollution.html"><a href="pollution.html"><i class="fa fa-check"></i><b>10</b> Pollution</a>
 <ul>
 <li class="chapter" data-level="10.1" data-path="pollution.html"><a href="pollution.html#fertility"><i class="fa fa-check"></i><b>10.1</b> Fertility</a></li>
 <li class="chapter" data-level="10.2" data-path="pollution.html"><a href="pollution.html#plastics"><i class="fa fa-check"></i><b>10.2</b> Plastics</a>
 <ul>
-<li class="chapter" data-level="10.2.1" data-path="pollution.html"><a href="pollution.html#virgin-polymer-production"><i class="fa fa-check"></i><b>10.2.1</b> Virgin Polymer Production</a></li>
-<li class="chapter" data-level="10.2.2" data-path="pollution.html"><a href="pollution.html#finance"><i class="fa fa-check"></i><b>10.2.2</b> Finance</a></li>
+<li class="chapter" data-level="10.2.1" data-path="pollution.html"><a href="pollution.html#dirty-thirty"><i class="fa fa-check"></i><b>10.2.1</b> Dirty-Thirty</a></li>
+<li class="chapter" data-level="10.2.2" data-path="pollution.html"><a href="pollution.html#virgin-polymer-production"><i class="fa fa-check"></i><b>10.2.2</b> Virgin Polymer Production</a></li>
+<li class="chapter" data-level="10.2.3" data-path="pollution.html"><a href="pollution.html#nurdles"><i class="fa fa-check"></i><b>10.2.3</b> Nurdles</a></li>
+<li class="chapter" data-level="10.2.4" data-path="pollution.html"><a href="pollution.html#finance"><i class="fa fa-check"></i><b>10.2.4</b> Finance</a></li>
 </ul></li>
 <li class="chapter" data-level="10.3" data-path="pollution.html"><a href="pollution.html#chemicals"><i class="fa fa-check"></i><b>10.3</b> Chemicals</a>
 <ul>
-<li class="chapter" data-level="10.3.1" data-path="pollution.html"><a href="pollution.html#tce---parkinson"><i class="fa fa-check"></i><b>10.3.1</b> TCE -&gt; Parkinson</a></li>
-<li class="chapter" data-level="10.3.2" data-path="pollution.html"><a href="pollution.html#voc"><i class="fa fa-check"></i><b>10.3.2</b> VOC</a></li>
-<li class="chapter" data-level="10.3.3" data-path="pollution.html"><a href="pollution.html#effect-on-marine-life"><i class="fa fa-check"></i><b>10.3.3</b> Effect on Marine Life</a></li>
-<li class="chapter" data-level="10.3.4" data-path="pollution.html"><a href="pollution.html#pesticides"><i class="fa fa-check"></i><b>10.3.4</b> Pesticides</a></li>
+<li class="chapter" data-level="10.3.1" data-path="pollution.html"><a href="pollution.html#chemicals-pollution"><i class="fa fa-check"></i><b>10.3.1</b> Chemicals’ Pollution</a></li>
+<li class="chapter" data-level="10.3.2" data-path="pollution.html"><a href="pollution.html#pfas---forever-chemicals"><i class="fa fa-check"></i><b>10.3.2</b> PFAS - “forever chemicals”*</a></li>
+<li class="chapter" data-level="10.3.3" data-path="pollution.html"><a href="pollution.html#tce---parkinson"><i class="fa fa-check"></i><b>10.3.3</b> TCE -&gt; Parkinson</a></li>
+<li class="chapter" data-level="10.3.4" data-path="pollution.html"><a href="pollution.html#voc"><i class="fa fa-check"></i><b>10.3.4</b> VOC</a></li>
+<li class="chapter" data-level="10.3.5" data-path="pollution.html"><a href="pollution.html#effect-on-marine-life"><i class="fa fa-check"></i><b>10.3.5</b> Effect on Marine Life</a></li>
+<li class="chapter" data-level="10.3.6" data-path="pollution.html"><a href="pollution.html#pesticides"><i class="fa fa-check"></i><b>10.3.6</b> Pesticides</a></li>
 </ul></li>
 <li class="chapter" data-level="10.4" data-path="pollution.html"><a href="pollution.html#sewage"><i class="fa fa-check"></i><b>10.4</b> Sewage</a>
 <ul>
@@ -172,10 +180,11 @@
 <li class="chapter" data-level="13.2.1" data-path="land-use.html"><a href="land-use.html#tropical-rainforest"><i class="fa fa-check"></i><b>13.2.1</b> Tropical Rainforest</a></li>
 </ul></li>
 <li class="chapter" data-level="13.3" data-path="land-use.html"><a href="land-use.html#deforestation-footprint"><i class="fa fa-check"></i><b>13.3</b> Deforestation Footprint</a></li>
-<li class="chapter" data-level="13.4" data-path="land-use.html"><a href="land-use.html#soil"><i class="fa fa-check"></i><b>13.4</b> Soil</a></li>
-<li class="chapter" data-level="13.5" data-path="land-use.html"><a href="land-use.html#lakes"><i class="fa fa-check"></i><b>13.5</b> Lakes</a></li>
-<li class="chapter" data-level="13.6" data-path="land-use.html"><a href="land-use.html#mountains"><i class="fa fa-check"></i><b>13.6</b> Mountains</a></li>
-<li class="chapter" data-level="13.7" data-path="land-use.html"><a href="land-use.html#urban"><i class="fa fa-check"></i><b>13.7</b> Urban</a></li>
+<li class="chapter" data-level="13.4" data-path="land-use.html"><a href="land-use.html#wetland"><i class="fa fa-check"></i><b>13.4</b> Wetland</a></li>
+<li class="chapter" data-level="13.5" data-path="land-use.html"><a href="land-use.html#soil"><i class="fa fa-check"></i><b>13.5</b> Soil</a></li>
+<li class="chapter" data-level="13.6" data-path="land-use.html"><a href="land-use.html#lakes"><i class="fa fa-check"></i><b>13.6</b> Lakes</a></li>
+<li class="chapter" data-level="13.7" data-path="land-use.html"><a href="land-use.html#mountains"><i class="fa fa-check"></i><b>13.7</b> Mountains</a></li>
+<li class="chapter" data-level="13.8" data-path="land-use.html"><a href="land-use.html#urban"><i class="fa fa-check"></i><b>13.8</b> Urban</a></li>
 </ul></li>
 <li class="chapter" data-level="14" data-path="monoculture.html"><a href="monoculture.html"><i class="fa fa-check"></i><b>14</b> Monoculture</a>
 <ul>
@@ -198,14 +207,16 @@
 <li class="chapter" data-level="16.6" data-path="actions.html"><a href="actions.html#rewilding"><i class="fa fa-check"></i><b>16.6</b> Rewilding</a></li>
 <li class="chapter" data-level="16.7" data-path="actions.html"><a href="actions.html#conservation"><i class="fa fa-check"></i><b>16.7</b> Conservation</a>
 <ul>
-<li class="chapter" data-level="16.7.1" data-path="actions.html"><a href="actions.html#nashulai"><i class="fa fa-check"></i><b>16.7.1</b> Nashulai</a></li>
-<li class="chapter" data-level="16.7.2" data-path="actions.html"><a href="actions.html#ecotourism"><i class="fa fa-check"></i><b>16.7.2</b> Ecotourism</a></li>
-<li class="chapter" data-level="16.7.3" data-path="actions.html"><a href="actions.html#conservation-trends"><i class="fa fa-check"></i><b>16.7.3</b> Conservation Trends</a></li>
-<li class="chapter" data-level="16.7.4" data-path="actions.html"><a href="actions.html#legacy-landscapes-fund"><i class="fa fa-check"></i><b>16.7.4</b> Legacy Landscapes Fund</a></li>
+<li class="chapter" data-level="16.7.1" data-path="actions.html"><a href="actions.html#communal-conservation"><i class="fa fa-check"></i><b>16.7.1</b> Communal Conservation</a></li>
+<li class="chapter" data-level="16.7.2" data-path="actions.html"><a href="actions.html#nashulai"><i class="fa fa-check"></i><b>16.7.2</b> Nashulai</a></li>
+<li class="chapter" data-level="16.7.3" data-path="actions.html"><a href="actions.html#ecotourism"><i class="fa fa-check"></i><b>16.7.3</b> Ecotourism</a></li>
+<li class="chapter" data-level="16.7.4" data-path="actions.html"><a href="actions.html#conservation-trends"><i class="fa fa-check"></i><b>16.7.4</b> Conservation Trends</a></li>
+<li class="chapter" data-level="16.7.5" data-path="actions.html"><a href="actions.html#legacy-landscapes-fund"><i class="fa fa-check"></i><b>16.7.5</b> Legacy Landscapes Fund</a></li>
 </ul></li>
 <li class="chapter" data-level="16.8" data-path="actions.html"><a href="actions.html#restoration"><i class="fa fa-check"></i><b>16.8</b> Restoration</a>
 <ul>
-<li class="chapter" data-level="16.8.1" data-path="actions.html"><a href="actions.html#regreening-sinai"><i class="fa fa-check"></i><b>16.8.1</b> Regreening Sinai</a></li>
+<li class="chapter" data-level="16.8.1" data-path="actions.html"><a href="actions.html#natural-regeneration"><i class="fa fa-check"></i><b>16.8.1</b> Natural regeneration</a></li>
+<li class="chapter" data-level="16.8.2" data-path="actions.html"><a href="actions.html#regreening-sinai"><i class="fa fa-check"></i><b>16.8.2</b> Regreening Sinai</a></li>
 </ul></li>
 <li class="chapter" data-level="16.9" data-path="actions.html"><a href="actions.html#legal"><i class="fa fa-check"></i><b>16.9</b> Legal</a></li>
 <li class="chapter" data-level="16.10" data-path="actions.html"><a href="actions.html#conflict-atlas"><i class="fa fa-check"></i><b>16.10</b> Conflict Atlas</a></li>
@@ -254,7 +265,7 @@
 <div id="header">
 <h1 class="title">Environment</h1>
 <p class="author"><em>Dyrehaugen Web Notebook</em></p>
-<p class="date"><em>2021-11-02</em></p>
+<p class="date"><em>2022-01-16</em></p>
 </div>
 <div id="environment" class="section level1" number="1">
 <h1><span class="header-section-number">1</span> Environment</h1>
