--- a/land-use.html
+++ b/land-use.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Dyrehaugen Web Notebook" />
 
 
-<meta name="date" content="2021-11-02" />
+<meta name="date" content="2022-01-16" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -129,21 +129,29 @@
 <ul>
 <li class="chapter" data-level="9.1" data-path="material-extraction.html"><a href="material-extraction.html#material-and-energy-productivity"><i class="fa fa-check"></i><b>9.1</b> Material and Energy Productivity</a></li>
 <li class="chapter" data-level="9.2" data-path="material-extraction.html"><a href="material-extraction.html#physical-economy-of-united-states"><i class="fa fa-check"></i><b>9.2</b> Physical Economy of United States</a></li>
+<li class="chapter" data-level="9.3" data-path="material-extraction.html"><a href="material-extraction.html#mining"><i class="fa fa-check"></i><b>9.3</b> Mining</a>
+<ul>
+<li class="chapter" data-level="9.3.1" data-path="material-extraction.html"><a href="material-extraction.html#battery-metals"><i class="fa fa-check"></i><b>9.3.1</b> Battery Metals</a></li>
+</ul></li>
 </ul></li>
 <li class="chapter" data-level="10" data-path="pollution.html"><a href="pollution.html"><i class="fa fa-check"></i><b>10</b> Pollution</a>
 <ul>
 <li class="chapter" data-level="10.1" data-path="pollution.html"><a href="pollution.html#fertility"><i class="fa fa-check"></i><b>10.1</b> Fertility</a></li>
 <li class="chapter" data-level="10.2" data-path="pollution.html"><a href="pollution.html#plastics"><i class="fa fa-check"></i><b>10.2</b> Plastics</a>
 <ul>
-<li class="chapter" data-level="10.2.1" data-path="pollution.html"><a href="pollution.html#virgin-polymer-production"><i class="fa fa-check"></i><b>10.2.1</b> Virgin Polymer Production</a></li>
-<li class="chapter" data-level="10.2.2" data-path="pollution.html"><a href="pollution.html#finance"><i class="fa fa-check"></i><b>10.2.2</b> Finance</a></li>
+<li class="chapter" data-level="10.2.1" data-path="pollution.html"><a href="pollution.html#dirty-thirty"><i class="fa fa-check"></i><b>10.2.1</b> Dirty-Thirty</a></li>
+<li class="chapter" data-level="10.2.2" data-path="pollution.html"><a href="pollution.html#virgin-polymer-production"><i class="fa fa-check"></i><b>10.2.2</b> Virgin Polymer Production</a></li>
+<li class="chapter" data-level="10.2.3" data-path="pollution.html"><a href="pollution.html#nurdles"><i class="fa fa-check"></i><b>10.2.3</b> Nurdles</a></li>
+<li class="chapter" data-level="10.2.4" data-path="pollution.html"><a href="pollution.html#finance"><i class="fa fa-check"></i><b>10.2.4</b> Finance</a></li>
 </ul></li>
 <li class="chapter" data-level="10.3" data-path="pollution.html"><a href="pollution.html#chemicals"><i class="fa fa-check"></i><b>10.3</b> Chemicals</a>
 <ul>
-<li class="chapter" data-level="10.3.1" data-path="pollution.html"><a href="pollution.html#tce---parkinson"><i class="fa fa-check"></i><b>10.3.1</b> TCE -&gt; Parkinson</a></li>
-<li class="chapter" data-level="10.3.2" data-path="pollution.html"><a href="pollution.html#voc"><i class="fa fa-check"></i><b>10.3.2</b> VOC</a></li>
-<li class="chapter" data-level="10.3.3" data-path="pollution.html"><a href="pollution.html#effect-on-marine-life"><i class="fa fa-check"></i><b>10.3.3</b> Effect on Marine Life</a></li>
-<li class="chapter" data-level="10.3.4" data-path="pollution.html"><a href="pollution.html#pesticides"><i class="fa fa-check"></i><b>10.3.4</b> Pesticides</a></li>
+<li class="chapter" data-level="10.3.1" data-path="pollution.html"><a href="pollution.html#chemicals-pollution"><i class="fa fa-check"></i><b>10.3.1</b> Chemicals’ Pollution</a></li>
+<li class="chapter" data-level="10.3.2" data-path="pollution.html"><a href="pollution.html#pfas---forever-chemicals"><i class="fa fa-check"></i><b>10.3.2</b> PFAS - “forever chemicals”*</a></li>
+<li class="chapter" data-level="10.3.3" data-path="pollution.html"><a href="pollution.html#tce---parkinson"><i class="fa fa-check"></i><b>10.3.3</b> TCE -&gt; Parkinson</a></li>
+<li class="chapter" data-level="10.3.4" data-path="pollution.html"><a href="pollution.html#voc"><i class="fa fa-check"></i><b>10.3.4</b> VOC</a></li>
+<li class="chapter" data-level="10.3.5" data-path="pollution.html"><a href="pollution.html#effect-on-marine-life"><i class="fa fa-check"></i><b>10.3.5</b> Effect on Marine Life</a></li>
+<li class="chapter" data-level="10.3.6" data-path="pollution.html"><a href="pollution.html#pesticides"><i class="fa fa-check"></i><b>10.3.6</b> Pesticides</a></li>
 </ul></li>
 <li class="chapter" data-level="10.4" data-path="pollution.html"><a href="pollution.html#sewage"><i class="fa fa-check"></i><b>10.4</b> Sewage</a>
 <ul>
@@ -172,10 +180,11 @@
 <li class="chapter" data-level="13.2.1" data-path="land-use.html"><a href="land-use.html#tropical-rainforest"><i class="fa fa-check"></i><b>13.2.1</b> Tropical Rainforest</a></li>
 </ul></li>
 <li class="chapter" data-level="13.3" data-path="land-use.html"><a href="land-use.html#deforestation-footprint"><i class="fa fa-check"></i><b>13.3</b> Deforestation Footprint</a></li>
-<li class="chapter" data-level="13.4" data-path="land-use.html"><a href="land-use.html#soil"><i class="fa fa-check"></i><b>13.4</b> Soil</a></li>
-<li class="chapter" data-level="13.5" data-path="land-use.html"><a href="land-use.html#lakes"><i class="fa fa-check"></i><b>13.5</b> Lakes</a></li>
-<li class="chapter" data-level="13.6" data-path="land-use.html"><a href="land-use.html#mountains"><i class="fa fa-check"></i><b>13.6</b> Mountains</a></li>
-<li class="chapter" data-level="13.7" data-path="land-use.html"><a href="land-use.html#urban"><i class="fa fa-check"></i><b>13.7</b> Urban</a></li>
+<li class="chapter" data-level="13.4" data-path="land-use.html"><a href="land-use.html#wetland"><i class="fa fa-check"></i><b>13.4</b> Wetland</a></li>
+<li class="chapter" data-level="13.5" data-path="land-use.html"><a href="land-use.html#soil"><i class="fa fa-check"></i><b>13.5</b> Soil</a></li>
+<li class="chapter" data-level="13.6" data-path="land-use.html"><a href="land-use.html#lakes"><i class="fa fa-check"></i><b>13.6</b> Lakes</a></li>
+<li class="chapter" data-level="13.7" data-path="land-use.html"><a href="land-use.html#mountains"><i class="fa fa-check"></i><b>13.7</b> Mountains</a></li>
+<li class="chapter" data-level="13.8" data-path="land-use.html"><a href="land-use.html#urban"><i class="fa fa-check"></i><b>13.8</b> Urban</a></li>
 </ul></li>
 <li class="chapter" data-level="14" data-path="monoculture.html"><a href="monoculture.html"><i class="fa fa-check"></i><b>14</b> Monoculture</a>
 <ul>
@@ -198,14 +207,16 @@
 <li class="chapter" data-level="16.6" data-path="actions.html"><a href="actions.html#rewilding"><i class="fa fa-check"></i><b>16.6</b> Rewilding</a></li>
 <li class="chapter" data-level="16.7" data-path="actions.html"><a href="actions.html#conservation"><i class="fa fa-check"></i><b>16.7</b> Conservation</a>
 <ul>
-<li class="chapter" data-level="16.7.1" data-path="actions.html"><a href="actions.html#nashulai"><i class="fa fa-check"></i><b>16.7.1</b> Nashulai</a></li>
-<li class="chapter" data-level="16.7.2" data-path="actions.html"><a href="actions.html#ecotourism"><i class="fa fa-check"></i><b>16.7.2</b> Ecotourism</a></li>
-<li class="chapter" data-level="16.7.3" data-path="actions.html"><a href="actions.html#conservation-trends"><i class="fa fa-check"></i><b>16.7.3</b> Conservation Trends</a></li>
-<li class="chapter" data-level="16.7.4" data-path="actions.html"><a href="actions.html#legacy-landscapes-fund"><i class="fa fa-check"></i><b>16.7.4</b> Legacy Landscapes Fund</a></li>
+<li class="chapter" data-level="16.7.1" data-path="actions.html"><a href="actions.html#communal-conservation"><i class="fa fa-check"></i><b>16.7.1</b> Communal Conservation</a></li>
+<li class="chapter" data-level="16.7.2" data-path="actions.html"><a href="actions.html#nashulai"><i class="fa fa-check"></i><b>16.7.2</b> Nashulai</a></li>
+<li class="chapter" data-level="16.7.3" data-path="actions.html"><a href="actions.html#ecotourism"><i class="fa fa-check"></i><b>16.7.3</b> Ecotourism</a></li>
+<li class="chapter" data-level="16.7.4" data-path="actions.html"><a href="actions.html#conservation-trends"><i class="fa fa-check"></i><b>16.7.4</b> Conservation Trends</a></li>
+<li class="chapter" data-level="16.7.5" data-path="actions.html"><a href="actions.html#legacy-landscapes-fund"><i class="fa fa-check"></i><b>16.7.5</b> Legacy Landscapes Fund</a></li>
 </ul></li>
 <li class="chapter" data-level="16.8" data-path="actions.html"><a href="actions.html#restoration"><i class="fa fa-check"></i><b>16.8</b> Restoration</a>
 <ul>
-<li class="chapter" data-level="16.8.1" data-path="actions.html"><a href="actions.html#regreening-sinai"><i class="fa fa-check"></i><b>16.8.1</b> Regreening Sinai</a></li>
+<li class="chapter" data-level="16.8.1" data-path="actions.html"><a href="actions.html#natural-regeneration"><i class="fa fa-check"></i><b>16.8.1</b> Natural regeneration</a></li>
+<li class="chapter" data-level="16.8.2" data-path="actions.html"><a href="actions.html#regreening-sinai"><i class="fa fa-check"></i><b>16.8.2</b> Regreening Sinai</a></li>
 </ul></li>
 <li class="chapter" data-level="16.9" data-path="actions.html"><a href="actions.html#legal"><i class="fa fa-check"></i><b>16.9</b> Legal</a></li>
 <li class="chapter" data-level="16.10" data-path="actions.html"><a href="actions.html#conflict-atlas"><i class="fa fa-check"></i><b>16.10</b> Conflict Atlas</a></li>
@@ -298,22 +309,41 @@ especially in the tropics – might do more harm than good for climate change mi
 <p>Deforestation, a significant threat to biodiversity, is accelerated by global demand for commodities. Although prior literature has linked deforestation to global supply chains, here we provide a fine-scale representation of spatial patterns of deforestation associated with international trade. Using remote sensing data and a multi-region input–output model, we quantify and map the spatiotemporal changes in global deforestation footprints over 15 years (2001–2015) at a 30-m resolution. We find that, while many developed countries, China and India have obtained net forest gains domestically, they have also increased the deforestation embodied in their imports, of which tropical forests are the most threatened biome. Consumption patterns of G7 countries drive an average loss of 3.9 trees per person per year. Some of the hotspots of deforestation embodied in international trade are also biodiversity hotspots, such as in Southeast Asia, Madagascar, Liberia, Central America and the Amazonian rainforest. Our results emphasize the need to reform zero-deforestation policies through strong transnational efforts and by improving supply chain transparency, public–private engagement and financial support for the tropics.</p>
 <p><a href="https://www.nature.com/articles/s41559-021-01417-z">Hoang (2021) Mapping Deforestation Footprint(Nature, paywall)</a></p>
 </div>
-<div id="soil" class="section level2" number="13.4">
-<h2><span class="header-section-number">13.4</span> Soil</h2>
+<div id="wetland" class="section level2" number="13.4">
+<h2><span class="header-section-number">13.4</span> Wetland</h2>
+<p><em>Global Wetland Outlook</em></p>
+<p><a href="https://www.global-wetland-outlook.ramsar.org/outlook">Global Wetland Outlook 2021 Update</a></p>
+<p>– Våtmarker lagrer over 30 prosent av alt landbasert karbon og er viktige for helse- mat- og vannsikkerhet.</p>
+<p>Den internasjonale avtalen om våtmarker – Ramsarkonvensjonen – har lansert en ny spesialrapport om situasjonen for verdens gjenværende våtmarker, Global Wetland Outlook: Special Edition 2021.</p>
+<p>Rapporten viser at vi fortsetter å ødelegge eller forringe våtmarkene i et alarmerende tempo. Globalt har 35 prosent av våtmarkene gått tapt siden 1970. Våtmarker er vårt mest truede økosystem, og de forsvinner tre ganger raskere enn skogene.</p>
+<p>Våtmarker er vårt mest effektive landbaserte økosystem for å fange karbon. Torvmarker, som blant annet inkluderer det meste av norske myrer, dekker kun 3 prosent av jordens landoverflate, men lagrer ifølge rapporten likevel 30 prosent av alt landbasert karbon.</p>
+<p>Hovedfunn fra rapporten:</p>
+<ul>
+<li>En fjerdedel av verdens våtmarksavhengige arter er i ferd med å bli utryddet.</li>
+<li>Effektene av klimaendringer på våtmark kommer mye raskere enn forventet. Dette slår særlig ut i arktiske strøk og i fjellet, men også langs kysten.</li>
+<li>Arealbruksendringer er den viktigste årsaken til at våtmarker har forsvunnet på land. Globalt har landbruk ødelagt eller forringet mer enn halvparten av verdens våtmarker.</li>
+<li>Dårlig forvaltning av våtmarker har økt graden av vannmangel og vannbårne sykdommer, og det er anslått at dette bidrar til millioner av dødsfall hvert år.</li>
+<li>Våtmark er mange steder avgjørende for tilpasning til et klima med våtere og villere vær, blant annet mangroveskog og torvmarker.</li>
+<li>Intakte og velfungerende våtmarker er avgjørende for å nå de globale klimamålene, FNs bærekraftsmål og målene i det globale rammeverket for biologisk mangfold som skal vedtas i 2022.</li>
+</ul>
+<p><a href="https://www.miljodirektoratet.no/aktuelt/nyheter/2021/desember-2021/vatmark-forsvinner-tre-ganger-raskere-enn-skogene/">Miljødirektoratet (Norway)</a></p>
+</div>
+<div id="soil" class="section level2" number="13.5">
+<h2><span class="header-section-number">13.5</span> Soil</h2>
 <p><strong>SoilDepth</strong></p>
 <p>No-till farming was developed and promoted in the mid-20th century as an erosion control measure. Under conventional tillage, soil is broken up and mixed mechanically. In no-till farming, soil disturbance is minimized and crop residues are left on the soil surface. Reducing or eliminating tillage improves water infiltration rates and protects against wind and water erosion. Reducing tillage also improves soil structure, allowing “aggregates” (intact clumps of soil) to form when they otherwise would have been broken into smaller pieces. Aggregates are often carbon rich, and are thought to have a role in protecting organic matter from decay.Although this suggests that eliminating or reducing tillage might be a way to increase the overall amount of carbon stored in soil, the relationship between tillage and soil carbon storage remains a heavily debated topic. No fewer than 11 synthesis papers published in the past five years have addressed the relationship between tillage and soil carbon storage.</p>
 <p>These papers each analyzed data from hundreds of individual studies. While the synthesis papers analyzed many of the same studies, they reached a range of conclusions. Some have concluded that tillage has no statistically detectable effect on overall soil carbon storage, while others have identified positive effects or indicated that tillage effects depend on other factors such as climate and soil type</p>
 <p>Sampling depth is likely a key source of the disagreement. It has two main effects, which we call the “carbon redistribution effect” and “density change effect”. We’ll describe each in turn.</p>
 <p><a href="https://carbonplan.org/research/soil-depth-sampling">carbinPlan</a></p>
 </div>
-<div id="lakes" class="section level2" number="13.5">
-<h2><span class="header-section-number">13.5</span> Lakes</h2>
+<div id="lakes" class="section level2" number="13.6">
+<h2><span class="header-section-number">13.6</span> Lakes</h2>
 </div>
-<div id="mountains" class="section level2" number="13.6">
-<h2><span class="header-section-number">13.6</span> Mountains</h2>
+<div id="mountains" class="section level2" number="13.7">
+<h2><span class="header-section-number">13.7</span> Mountains</h2>
 </div>
-<div id="urban" class="section level2" number="13.7">
-<h2><span class="header-section-number">13.7</span> Urban</h2>
+<div id="urban" class="section level2" number="13.8">
+<h2><span class="header-section-number">13.8</span> Urban</h2>
 
 </div>
 </div>
