--- a/material-extraction.html
+++ b/material-extraction.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Dyrehaugen Web Notebook" />
 
 
-<meta name="date" content="2021-11-02" />
+<meta name="date" content="2022-01-16" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -129,21 +129,29 @@
 <ul>
 <li class="chapter" data-level="9.1" data-path="material-extraction.html"><a href="material-extraction.html#material-and-energy-productivity"><i class="fa fa-check"></i><b>9.1</b> Material and Energy Productivity</a></li>
 <li class="chapter" data-level="9.2" data-path="material-extraction.html"><a href="material-extraction.html#physical-economy-of-united-states"><i class="fa fa-check"></i><b>9.2</b> Physical Economy of United States</a></li>
+<li class="chapter" data-level="9.3" data-path="material-extraction.html"><a href="material-extraction.html#mining"><i class="fa fa-check"></i><b>9.3</b> Mining</a>
+<ul>
+<li class="chapter" data-level="9.3.1" data-path="material-extraction.html"><a href="material-extraction.html#battery-metals"><i class="fa fa-check"></i><b>9.3.1</b> Battery Metals</a></li>
+</ul></li>
 </ul></li>
 <li class="chapter" data-level="10" data-path="pollution.html"><a href="pollution.html"><i class="fa fa-check"></i><b>10</b> Pollution</a>
 <ul>
 <li class="chapter" data-level="10.1" data-path="pollution.html"><a href="pollution.html#fertility"><i class="fa fa-check"></i><b>10.1</b> Fertility</a></li>
 <li class="chapter" data-level="10.2" data-path="pollution.html"><a href="pollution.html#plastics"><i class="fa fa-check"></i><b>10.2</b> Plastics</a>
 <ul>
-<li class="chapter" data-level="10.2.1" data-path="pollution.html"><a href="pollution.html#virgin-polymer-production"><i class="fa fa-check"></i><b>10.2.1</b> Virgin Polymer Production</a></li>
-<li class="chapter" data-level="10.2.2" data-path="pollution.html"><a href="pollution.html#finance"><i class="fa fa-check"></i><b>10.2.2</b> Finance</a></li>
+<li class="chapter" data-level="10.2.1" data-path="pollution.html"><a href="pollution.html#dirty-thirty"><i class="fa fa-check"></i><b>10.2.1</b> Dirty-Thirty</a></li>
+<li class="chapter" data-level="10.2.2" data-path="pollution.html"><a href="pollution.html#virgin-polymer-production"><i class="fa fa-check"></i><b>10.2.2</b> Virgin Polymer Production</a></li>
+<li class="chapter" data-level="10.2.3" data-path="pollution.html"><a href="pollution.html#nurdles"><i class="fa fa-check"></i><b>10.2.3</b> Nurdles</a></li>
+<li class="chapter" data-level="10.2.4" data-path="pollution.html"><a href="pollution.html#finance"><i class="fa fa-check"></i><b>10.2.4</b> Finance</a></li>
 </ul></li>
 <li class="chapter" data-level="10.3" data-path="pollution.html"><a href="pollution.html#chemicals"><i class="fa fa-check"></i><b>10.3</b> Chemicals</a>
 <ul>
-<li class="chapter" data-level="10.3.1" data-path="pollution.html"><a href="pollution.html#tce---parkinson"><i class="fa fa-check"></i><b>10.3.1</b> TCE -&gt; Parkinson</a></li>
-<li class="chapter" data-level="10.3.2" data-path="pollution.html"><a href="pollution.html#voc"><i class="fa fa-check"></i><b>10.3.2</b> VOC</a></li>
-<li class="chapter" data-level="10.3.3" data-path="pollution.html"><a href="pollution.html#effect-on-marine-life"><i class="fa fa-check"></i><b>10.3.3</b> Effect on Marine Life</a></li>
-<li class="chapter" data-level="10.3.4" data-path="pollution.html"><a href="pollution.html#pesticides"><i class="fa fa-check"></i><b>10.3.4</b> Pesticides</a></li>
+<li class="chapter" data-level="10.3.1" data-path="pollution.html"><a href="pollution.html#chemicals-pollution"><i class="fa fa-check"></i><b>10.3.1</b> Chemicals’ Pollution</a></li>
+<li class="chapter" data-level="10.3.2" data-path="pollution.html"><a href="pollution.html#pfas---forever-chemicals"><i class="fa fa-check"></i><b>10.3.2</b> PFAS - “forever chemicals”*</a></li>
+<li class="chapter" data-level="10.3.3" data-path="pollution.html"><a href="pollution.html#tce---parkinson"><i class="fa fa-check"></i><b>10.3.3</b> TCE -&gt; Parkinson</a></li>
+<li class="chapter" data-level="10.3.4" data-path="pollution.html"><a href="pollution.html#voc"><i class="fa fa-check"></i><b>10.3.4</b> VOC</a></li>
+<li class="chapter" data-level="10.3.5" data-path="pollution.html"><a href="pollution.html#effect-on-marine-life"><i class="fa fa-check"></i><b>10.3.5</b> Effect on Marine Life</a></li>
+<li class="chapter" data-level="10.3.6" data-path="pollution.html"><a href="pollution.html#pesticides"><i class="fa fa-check"></i><b>10.3.6</b> Pesticides</a></li>
 </ul></li>
 <li class="chapter" data-level="10.4" data-path="pollution.html"><a href="pollution.html#sewage"><i class="fa fa-check"></i><b>10.4</b> Sewage</a>
 <ul>
@@ -172,10 +180,11 @@
 <li class="chapter" data-level="13.2.1" data-path="land-use.html"><a href="land-use.html#tropical-rainforest"><i class="fa fa-check"></i><b>13.2.1</b> Tropical Rainforest</a></li>
 </ul></li>
 <li class="chapter" data-level="13.3" data-path="land-use.html"><a href="land-use.html#deforestation-footprint"><i class="fa fa-check"></i><b>13.3</b> Deforestation Footprint</a></li>
-<li class="chapter" data-level="13.4" data-path="land-use.html"><a href="land-use.html#soil"><i class="fa fa-check"></i><b>13.4</b> Soil</a></li>
-<li class="chapter" data-level="13.5" data-path="land-use.html"><a href="land-use.html#lakes"><i class="fa fa-check"></i><b>13.5</b> Lakes</a></li>
-<li class="chapter" data-level="13.6" data-path="land-use.html"><a href="land-use.html#mountains"><i class="fa fa-check"></i><b>13.6</b> Mountains</a></li>
-<li class="chapter" data-level="13.7" data-path="land-use.html"><a href="land-use.html#urban"><i class="fa fa-check"></i><b>13.7</b> Urban</a></li>
+<li class="chapter" data-level="13.4" data-path="land-use.html"><a href="land-use.html#wetland"><i class="fa fa-check"></i><b>13.4</b> Wetland</a></li>
+<li class="chapter" data-level="13.5" data-path="land-use.html"><a href="land-use.html#soil"><i class="fa fa-check"></i><b>13.5</b> Soil</a></li>
+<li class="chapter" data-level="13.6" data-path="land-use.html"><a href="land-use.html#lakes"><i class="fa fa-check"></i><b>13.6</b> Lakes</a></li>
+<li class="chapter" data-level="13.7" data-path="land-use.html"><a href="land-use.html#mountains"><i class="fa fa-check"></i><b>13.7</b> Mountains</a></li>
+<li class="chapter" data-level="13.8" data-path="land-use.html"><a href="land-use.html#urban"><i class="fa fa-check"></i><b>13.8</b> Urban</a></li>
 </ul></li>
 <li class="chapter" data-level="14" data-path="monoculture.html"><a href="monoculture.html"><i class="fa fa-check"></i><b>14</b> Monoculture</a>
 <ul>
@@ -198,14 +207,16 @@
 <li class="chapter" data-level="16.6" data-path="actions.html"><a href="actions.html#rewilding"><i class="fa fa-check"></i><b>16.6</b> Rewilding</a></li>
 <li class="chapter" data-level="16.7" data-path="actions.html"><a href="actions.html#conservation"><i class="fa fa-check"></i><b>16.7</b> Conservation</a>
 <ul>
-<li class="chapter" data-level="16.7.1" data-path="actions.html"><a href="actions.html#nashulai"><i class="fa fa-check"></i><b>16.7.1</b> Nashulai</a></li>
-<li class="chapter" data-level="16.7.2" data-path="actions.html"><a href="actions.html#ecotourism"><i class="fa fa-check"></i><b>16.7.2</b> Ecotourism</a></li>
-<li class="chapter" data-level="16.7.3" data-path="actions.html"><a href="actions.html#conservation-trends"><i class="fa fa-check"></i><b>16.7.3</b> Conservation Trends</a></li>
-<li class="chapter" data-level="16.7.4" data-path="actions.html"><a href="actions.html#legacy-landscapes-fund"><i class="fa fa-check"></i><b>16.7.4</b> Legacy Landscapes Fund</a></li>
+<li class="chapter" data-level="16.7.1" data-path="actions.html"><a href="actions.html#communal-conservation"><i class="fa fa-check"></i><b>16.7.1</b> Communal Conservation</a></li>
+<li class="chapter" data-level="16.7.2" data-path="actions.html"><a href="actions.html#nashulai"><i class="fa fa-check"></i><b>16.7.2</b> Nashulai</a></li>
+<li class="chapter" data-level="16.7.3" data-path="actions.html"><a href="actions.html#ecotourism"><i class="fa fa-check"></i><b>16.7.3</b> Ecotourism</a></li>
+<li class="chapter" data-level="16.7.4" data-path="actions.html"><a href="actions.html#conservation-trends"><i class="fa fa-check"></i><b>16.7.4</b> Conservation Trends</a></li>
+<li class="chapter" data-level="16.7.5" data-path="actions.html"><a href="actions.html#legacy-landscapes-fund"><i class="fa fa-check"></i><b>16.7.5</b> Legacy Landscapes Fund</a></li>
 </ul></li>
 <li class="chapter" data-level="16.8" data-path="actions.html"><a href="actions.html#restoration"><i class="fa fa-check"></i><b>16.8</b> Restoration</a>
 <ul>
-<li class="chapter" data-level="16.8.1" data-path="actions.html"><a href="actions.html#regreening-sinai"><i class="fa fa-check"></i><b>16.8.1</b> Regreening Sinai</a></li>
+<li class="chapter" data-level="16.8.1" data-path="actions.html"><a href="actions.html#natural-regeneration"><i class="fa fa-check"></i><b>16.8.1</b> Natural regeneration</a></li>
+<li class="chapter" data-level="16.8.2" data-path="actions.html"><a href="actions.html#regreening-sinai"><i class="fa fa-check"></i><b>16.8.2</b> Regreening Sinai</a></li>
 </ul></li>
 <li class="chapter" data-level="16.9" data-path="actions.html"><a href="actions.html#legal"><i class="fa fa-check"></i><b>16.9</b> Legal</a></li>
 <li class="chapter" data-level="16.10" data-path="actions.html"><a href="actions.html#conflict-atlas"><i class="fa fa-check"></i><b>16.10</b> Conflict Atlas</a></li>
@@ -301,7 +312,29 @@ MI is defined as DMC/GDP.
 Note the logarithmic scale</em></p>
 <p><a href="https://onlinelibrary.wiley.com/doi/full/10.1111/j.1530-9290.2011.00404.x">Gierlinger (2011) Physical Economy of United States</a>
 <a href="pdf/Gierlinger_2011_Physical_Economy_of_US.pdf">(pdf)</a></p>
+</div>
+<div id="mining" class="section level2" number="9.3">
+<h2><span class="header-section-number">9.3</span> Mining</h2>
+<div id="battery-metals" class="section level3" number="9.3.1">
+<h3><span class="header-section-number">9.3.1</span> Battery Metals</h3>
+<p><em>Beslik</em></p>
+<p>Rare earth metals are at the core of every major technology today. Smartphones, laptops, wind turbines, electric cars, and medical devices, you name it.</p>
+<p>They’re also widely used in defence technology like jets and guided missile systems. Rare earth metals are essential to modern technology.</p>
+<p>It’s important to distinguish between: ‘rare-’, ‘precious-’, and ‘critical-’ earth elements. The terms are not interchangeable, but unfortunately often are in popular media.</p>
+<p>It’s also important to distinguish between ‘reserves’ and ‘resources’. Reserves denote the amount that can be technically recovered at a cost that is financially feasible at the present price. Resources include all that can be technically recovered at any price.</p>
+<p>Electric vehicles typically use two precious earth metals: gold and silver. These are used in minute quantities in the circuit boards, which also occurs in modern fossil fuelled vehicles. The circuit boards run the electronics. These valuable metals are fully recyclable.</p>
+<p>Critical earth elements typically found in EV batteries are: lithium and cobalt, both fully recyclable. Both Lithium and cobalt metals can be reused over and over repeatedly. These two elements are not particularly rare – cobalt can be found in most rocks, and lithium is the first metal in the periodic table and one of only three elements created in the primordial Big Bang. Lithium is the 32nd most common element on our planet.</p>
+<p>But both metals are critical because of modern societies’ dependence on lithium-ion battery technology for mobile phones, laptops, and now EVs. And also, in the case of cobalt, because of geopolitics: the bulk of the cobalt supply comes from the politically unstable Democratic Republic of Congo. While there are plenty of lithium and cobalt resources, there are fewer reserves of them. Cobalt is a by-product of nickel and copper mines, and is therefore dependent on the economic viability of those mining operations.</p>
+<p>Worldwide sources of lithium are broken down by ore-deposit type as follows: closed-basin brines, 58%; pegmatites and related granites, 26%; lithium-enriched clays, 7%; oilfield brines, 3%; geothermal brines, 3%; and lithium-enriched zeolites, 3% (2013 statistics USGS). Of those, closed basin brines are the most important source of lithium reserves.</p>
+<p>Put simplistically, dissolved lithium salts are most commonly mined by drilling down to underground saline deposits and pumping the saline to the surface where it is left to dry in the desert sun, before being processed into lithium metal (and other elements, like potash and magnesium).</p>
+<p>China currently holds a near monopoly on supply. China mines 94-97% of the rare earth metals globally and, while efforts have increased in America and Europe to find alternative supplies, there are still no clear avenues to diversifying supply. China has become the world’s largest producer simply because Western nations don’t want to do the dirty work that is required to produce rare earths.</p>
+<p>The reason most often cited for this shift to China is cheap labour. However another, which is often tacitly acknowledged, is lack of environmental regulation. This has meant that costs associated with proper environmental protection – required if manufacturing occurred in the west – have not been built in to the price of goods.</p>
+<p>Australia has substantial rare element deposits. However, the current major Australia processing operation involves a site in Malaysia. This controversial project by Lynas has sparked a major local environmental protest campaign led by Malay residents concerned about environmental and health impacts.</p>
+<p>Rare earth metals are currently extracted through mining, which comes with a number of downsides. First, it’s costly and inefficient because extracting even a very small amount of rare earth metals requires large areas to be mined. Second, the process can have enormous environmental impacts. Mining for rare earth minerals generates large volumes of toxic and radioactive material, due to the co-extraction of thorium and uranium, radioactive metals which cause problems for the environment and human health.</p>
+<p>These are the <a href="https://www.mining.com/web/ranked-top-25-nations-producing-battery-metals-for-the-ev-supply-chain/">locations</a> where the mining of battery metals is taking place.</p>
+<p><a href="https://esgonasunday.substack.com/p/week-51-merry-electric-christmas">Beslik (2021) Merry Electric Christmas</a></p>
 
+</div>
 </div>
 </div>
             </section>
